<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*" >

    <TableRow>

        <TextView
            android:id="@+id/tvDrinkName"
            style="@style/dialogInputCaption"
            android:layout_span="3" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/dialogInputCaption"
            android:text="@string/sugar_level" />

        <Spinner
            android:id="@+id/spSugarLevel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:entries="@array/sugar_level_items" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/dialogInputCaption"
            android:text="@string/ice_level" />

        <Spinner
            android:id="@+id/spIceLevel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:entries="@array/ice_level_items" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/dialogInputCaption"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2" >

            <EditText
                android:id="@+id/etDrinkQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:id="@+id/btnQtyInc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

            <Button
                android:id="@+id/btnQtyDec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </LinearLayout>
    </TableRow>

    <TableRow>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/btnConfirmDrinkDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_ok" />
        </LinearLayout>
    </TableRow>

</TableLayout>